RESOLVED FIXED 216623
AudioBufferSourceNode.start() ignores 'when' parameter when pitch rate is 0
https://bugs.webkit.org/show_bug.cgi?id=216623
Summary AudioBufferSourceNode.start() ignores 'when' parameter when pitch rate is 0
Chris Dumez
Reported 2020-09-16 15:37:21 PDT
AudioBufferSourceNode.start() ignores 'when' parameter when pitch rate is 0.
Attachments
Patch (4.75 KB, patch)
2020-09-16 15:42 PDT, Chris Dumez
eric.carlson: review+
Chris Dumez
Comment 1 2020-09-16 15:42:41 PDT
Eric Carlson
Comment 2 2020-09-16 16:23:39 PDT
Comment on attachment 408960 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=408960&action=review > Source/WebCore/ChangeLog:10 > + begining out the destination buffer, ignoring the computed writeIndex. As a result, s/out/of/
Chris Dumez
Comment 3 2020-09-16 16:26:14 PDT
Radar WebKit Bug Importer
Comment 4 2020-09-16 16:27:18 PDT
Note You need to log in before you can comment on or make changes to this bug.