AudioBufferSourceNode.start() ignores 'when' parameter when pitch rate is 0 https://bugs.webkit.org/show_bug.cgi?id=216623

Reviewed by Eric Carlson.

LayoutTests/imported/w3c:

Rebaseline WPT test that is now passing.

* web-platform-tests/webaudio/the-audio-api/the-audiobuffersourcenode-interface/audiobuffersource-playbackrate-zero-expected.txt:

Source/WebCore:

AudioBufferSourceNode::renderFromBuffer() has special logic when pitch rate is 0 since
the output value is constant. However, that logic was wrongly always writing to the
begining of the destination buffer, ignoring the computed writeIndex. As a result,
instead of having silence at the beginning of the destination buffer, we would have
it at the end.

No new tests, rebaselined existing test.

* Modules/webaudio/AudioBufferSourceNode.cpp:
(WebCore::AudioBufferSourceNode::renderFromBuffer):

Canonical link: https://commits.webkit.org/229445@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@267170 268f45cc-cd09-0410-ab3c-d52691b4dbfc